log
In file included from srcs//Tools/Utils.cpp:1:
In file included from includes/General.hpp:33:
includes/Config.hpp:25:27: error: in-class initialization of non-static data member is a C++11 extension [-Werror,-Wc++11-extensions]
                        bool                                            is_autoindex = false;
                                                                                     ^
includes/Config.hpp:26:31: error: in-class initialization of non-static data member is a C++11 extension [-Werror,-Wc++11-extensions]
                        bool                                            is_upload_enable = false;
                                                                                         ^
srcs//Tools/Utils.cpp:30:88: error: no viable conversion from '__map_iterator<__tree_iterator<__value_type<[...], Config::location>, std::__1::__tree<std::__1::__value_type<std::__1::basic_string<char>, Config::location>, std::__1::__map_value_compare<std::__1::basic_string<char>, std::__1::__value_type<std::__1::basic_string<char>, Config::location>, std::__1::less<std::__1::basic_string<char> >, true>, std::__1::allocator<std::__1::__value_type<std::__1::basic_string<char>, Config::location> > >::__node_pointer, [...]>>' to '__map_iterator<__tree_iterator<__value_type<[...], std::__1::map<std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > > >>, std::__1::__tree<std::__1::__value_type<std::__1::basic_string<char>, std::__1::map<std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > > > >, std::__1::__map_value_compare<std::__1::basic_string<char>, std::__1::__value_type<std::__1::basic_string<char>, std::__1::map<std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > > > >, std::__1::less<std::__1::basic_string<char> >, true>, std::__1::allocator<std::__1::__value_type<std::__1::basic_string<char>, std::__1::map<std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > > > > > >::__node_pointer, [...]>>'
        for (std::map<std::string, std::map<std::string, std::list<std::string> > >::iterator it = config.locations.begin(); it != config.locations.end(); it++)
                                                                                              ^    ~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/map:751:28: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'std::__1::map<std::__1::basic_string<char>, Config::location, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, Config::location> > >::iterator' (aka '__map_iterator<__tree_iterator<std::__1::__value_type<std::__1::basic_string<char>, Config::location>, std::__1::__tree_node<std::__1::__value_type<std::__1::basic_string<char>, Config::location>, void *> *, long> >') to 'const std::__1::__map_iterator<std::__1::__tree_iterator<std::__1::__value_type<std::__1::basic_string<char>, std::__1::map<std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > > > >, std::__1::__tree_node<std::__1::__value_type<std::__1::basic_string<char>, std::__1::map<std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > > > >, void *> *, long> > &' for 1st argument
class _LIBCPP_TEMPLATE_VIS __map_iterator
                           ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/map:769:5: note: candidate constructor not viable: no known conversion from 'std::__1::map<std::__1::basic_string<char>, Config::location, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, Config::location> > >::iterator' (aka '__map_iterator<__tree_iterator<std::__1::__value_type<std::__1::basic_string<char>, Config::location>, std::__1::__tree_node<std::__1::__value_type<std::__1::basic_string<char>, Config::location>, void *> *, long> >') to 'std::__1::__tree_iterator<std::__1::__value_type<std::__1::basic_string<char>, std::__1::map<std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > > > >, std::__1::__tree_node<std::__1::__value_type<std::__1::basic_string<char>, std::__1::map<std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::pair<const std::__1::basic_string<char>, std::__1::list<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > > > > > >, void *> *, long>' for 1st argument
    __map_iterator(_TreeIterator __i) _NOEXCEPT : __i_(__i) {}
    ^
3 errors generated.
make: *** [bin/Utils.o] Error 1
